# db

./: .gitignore  README.md
src/catalogue/: Cargo.toml
src/catalogue/src/: boolean.rs  def.rs  group.rs  integer.rs  lib.rs  text.rs
src/decimal/src/: d16.rs  d32.rs  d64.rs  d8.rs  decimal.rs  def.rs  lib.rs
src/ds/: Cargo.toml
src/ds/src/: avl.rs  btree.rs  lib.rs  linked_list.rs  stack.rs
src/estate/: Cargo.toml
src/estate/src/: def.rs  farming.rs  lib.rs  residential.rs
src/field/: Cargo.toml
src/field/src/: finfo.rs  lib.rs
src/fumble/: Cargo.toml
src/fumble/src/: lib.rs
src/godown/: Cargo.toml
src/godown/src/: assembly_line.rs  block.rs  def.rs  disk.rs  flag.rs  labeller.rs  lib.rs  logistics.rs
src/marketplace/: Cargo.toml
src/marketplace/src/: lib.rs  parser.rs  serde.rs
src/primitive/: Cargo.toml
src/primitive/src/: lib.rs
src/scalar/: Cargo.toml
src/scalar/src/: decimal.rs  def.rs  integer.rs  lib.rs  type_code.rs
src/serve/: Cargo.toml
src/serve/src/: main.rs
src/setup/: Cargo.toml
src/setup/src/: def.rs  env.rs  lib.rs
src/warehouse/: Cargo.toml
src/warehouse/src/: inventory.rs  lib.rs  merchandise.rs
