[package]
name = "field"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warehouse = { path = "../warehouse" }
ds = { path = "../ds" }
primitive = { path = "../primitive" }
estate = { path = "../estate" }
fumble = { path = "../fumble" }

[dev-dependencies]
setup = { path = "../setup" }
