[package]
name = "godown"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
estate = { path = "../estate" }
setup = { path = "../setup" }
fumble = { path = "../fumble" }

[dev-dependencies]
rand = "0.8.5"
uuid = { version = "1.6.1", features = ["v4"] }
